--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,3 +45,4 @@ jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 googleServices = { id = "com.google.gms.google-services", version = "4.4.2" }
+cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version = "2.1.0-Beta2" }
