--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,17 +8,20 @@ androidx-appcompat = "1.7.0"
 androidx-constraintlayout = "2.2.0"
 androidx-core-ktx = "1.15.0"
 androidx-espresso-core = "3.6.1"
-androidx-lifecycle = "2.8.2"
+androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
-coil = "3.0.0"
-compose-plugin = "1.6.11"
+coil = "3.0.4"
+compose-plugin = "1.7.1"
+firebase = "2.1.0"
 junit = "4.13.2"
 kotlin = "2.0.21"
 ktor = "3.0.1"
-coil-network-ktor = "3.0.0"
+coil-network-ktor = "3.0.4"
 
 [libraries]
+firebase-common = { module = "dev.gitlive:firebase-common", version.ref = "firebase" }
+firebase-config = { module = "dev.gitlive:firebase-config", version.ref = "firebase" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
