Refactor: Apply detekt and update dependencies
- Added detekt to the project for static analysis.
- Updated dependencies, including Gradle, AGP, Ktor, coil, and desugar.
- Refactored code to comply with detekt rules.
- Changed `List` to `ImmutableList` in some places for immutability.
- Updated the `GZip` implementation.
- Added a deep link route for the Teams list screen.
- Updated package names for various UI components.
- Updated data classes to be internal.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,8 +16,9 @@ compose-plugin = "1.7.1"
 firebase = "2.1.0"
 junit = "4.13.2"
 kotlin = "2.1.0"
-ktor = "3.0.1"
+ktor = "3.0.2"
 coil-network-ktor = "3.0.4"
+detekt = "1.23.7"
 
 [libraries]
 firebase-common = { module = "dev.gitlive:firebase-common", version.ref = "firebase" }
@@ -42,6 +43,10 @@ ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
 kotlin-serialization-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version = "1.7.3" }
+desugar-jdk = { module = "com.android.tools:desugar_jdk_libs", version = "2.1.3" }
+kotlin-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version = "0.3.8" }
+twitter-compose-detekt-rules = { module = "com.twitter.compose.rules:detekt", version = "0.0.26" }
+ktlint-detekt-rules = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -52,3 +57,4 @@ kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref =
 googleServices = { id = "com.google.gms.google-services", version = "4.4.2" }
 cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version = "2.1.0-Beta2" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version = "2.1.0" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
