Refactor race and stage details
Extracted composables for:
- Race row
- Stage info
- Stage results

--- a/composeApp/config/detekt/detekt.yml
+++ b/composeApp/config/detekt/detekt.yml
@@ -22,7 +22,7 @@ complexity:
     ignoreDefaultParameters: true
   TooManyFunctions:
     thresholdInClasses: 12
-    ignoreAnnotated: [ 'Preview' ]
+    ignoreAnnotatedFunctions: [ 'Preview' ]
 
 TwitterCompose:
   CompositionLocalAllowlist:
