--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -29,6 +29,14 @@
                 <data android:scheme="mycyclist" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".expect.MyCyclistFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
