feat: Enable edge-to-edge and adjust window insets
- Enables edge-to-edge display mode in `MainActivity`.
- Consumes window insets in `MyCyclistScaffold` to prevent content from being hidden behind system bars.
- Sets `windowSoftInputMode` to `adjustResize` in `AndroidManifest` for `MainActivity`.
- Removes `PaddingValues` argument in `Navigation` composable.
- Updates `configChanges` for `MainActivity` in `AndroidManifest`.

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@android:style/Theme.Material.Light.NoActionBar">
         <activity
             android:name="io.github.patxibocos.mycyclist.MainActivity"
-            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden|mnc|colorMode|density|fontScale|fontWeightAdjustment|keyboard|layoutDirection|locale|mcc|navigation|smallestScreenSize|touchscreen|uiMode"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
