--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ android-targetSdk = "Baklava"
 androidx-activityCompose = "1.10.1"
 androidx-lifecycle = "2.8.4"
 coil = "3.1.0"
-compose-plugin = "1.7.3"
+compose-plugin = "1.8.0-alpha04"
 firebase = "2.1.0"
 kotlin = "2.1.10"
 ktor = "3.1.1"
