--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </activity>
 
         <service
-            android:name=".expect.MyCyclistFirebaseMessagingService"
+            android:name=".gzip.MyCyclistFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
