--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 agp = "8.9.1"
 android-compileSdk = "35"
 android-minSdk = "24"
-android-targetSdk = "Baklava"
+android-targetSdk = "36"
 androidx-activityCompose = "1.10.1"
 androidx-lifecycle = "2.8.4"
 androidx-navigation-compose = "2.9.0-alpha15"
