--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-agp = "8.9.1"
-android-compileSdk = "35"
+agp = "8.9.2"
+android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "36"
 androidx-activityCompose = "1.10.1"
 androidx-lifecycle = "2.8.4"
-androidx-navigation-compose = "2.9.0-alpha15"
+androidx-navigation-compose = "2.9.0-alpha16"
 coil = "3.1.0"
 coil-network-ktor = "3.1.0"
-compose-plugin = "1.8.0-beta01"
-compose-ui-backhandler = "1.8.0-beta01"
+compose-plugin = "1.8.0-rc01"
+compose-ui-backhandler = "1.8.0-rc01"
 desugar-jdk = "2.1.5"
 detekt = "1.23.8"
 firebase = "2.1.0"
@@ -18,7 +18,7 @@ kotlin = "2.1.20"
 kotlinx-collections-immutable = "0.3.8"
 kotlinx-serialization-protobuf = "1.8.1"
 ktor = "3.1.2"
-material3-adaptive = "1.1.0-beta01"
+material3-adaptive = "1.1.0-rc01"
 twitter-compose-rules-detekt = "0.0.26"
 
 [libraries]
