--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,6 +15,9 @@ jobs:
           distribution: 'zulu'
           java-version: 17
 
+      - name: Generate dummy framework
+        run: ./gradlew :composeApp:generateDummyFramework
+
       - name: Install CocoaPods
         run: |
           sudo gem install cocoapods
