--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -23,6 +23,12 @@ jobs:
           sudo gem install cocoapods
           pod repo update
 
+      - name: Clean Pods and DerivedData
+        run: |
+          rm -rf iosApp/Pods
+          rm -rf iosApp/Podfile.lock
+          rm -rf ~/Library/Developer/Xcode/DerivedData
+
       - name: Install Pods
         working-directory: iosApp
         run: pod install
@@ -34,4 +40,6 @@ jobs:
             -scheme iosApp \
             -sdk iphonesimulator \
             -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.2' \
+            ARCHS=x86_64 \
+            ONLY_ACTIVE_ARCH=YES \
             clean build
