--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,6 +15,9 @@ jobs:
           distribution: 'zulu'
           java-version: 17
 
+      - name: Select Xcode version
+        run: sudo xcode-select -s /Applications/Xcode_16.2.app
+
       - name: Generate dummy framework
         run: ./gradlew :composeApp:generateDummyFramework
 
