--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -21,28 +21,13 @@ jobs:
       - name: Generate dummy framework
         run: ./gradlew :composeApp:generateDummyFramework
 
-      - name: Install CocoaPods
-        run: |
-          sudo gem install cocoapods
-          pod repo update
-
-      - name: Clean Pods and DerivedData
-        run: |
-          rm -rf iosApp/Pods
-          rm -rf iosApp/Podfile.lock
-          rm -rf ~/Library/Developer/Xcode/DerivedData
-
       - name: Install Pods
-        working-directory: iosApp
-        run: pod install
+        run: ./gradlew podInstall
 
       - name: Build iOS app
         run: |
           xcodebuild \
             -workspace iosApp/iosApp.xcworkspace \
             -scheme iosApp \
-            -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.2' \
-            ARCHS=x86_64 \
-            ONLY_ACTIVE_ARCH=YES \
-            clean build
+            -configuration Debug \
+            -sdk iphonesimulator
