--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
   ],
   "automerge": true,
   "automergeType": "pr",
+  "platformAutomerge": true,
   "packageRules": [
     {
       "matchUpdateTypes": ["patch", "minor"],
