feat: Implement Firebase Remote Config for Desktop
This commit introduces Firebase Remote Config functionality for the desktop application.

Key changes include:
- Added `Main.kt` for the desktop application entry point.
- Modified `DataRepository.desktop.kt` to fetch cycling data from Firebase Remote Config instead of a local file. This involves:
    - Adding dependencies for Google OAuth2, Ktor CIO client, and Ktor JSON serialization.
    - Implementing logic to authenticate with Google services using a service account.
    - Fetching, decoding (Base64), and unzipping the remote config value.
- Added a `service-account.json` file for Firebase authentication.
- Updated `build.gradle.kts` and `libs.versions.toml` to include necessary dependencies for Firebase Remote Config and Ktor.
- Refactored `MessagingRepository` to have a default empty implementation for `initialize()`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ compose-ui-backhandler = "1.8.1"
 desugar-jdk = "2.1.5"
 detekt = "1.23.8"
 firebase = "2.1.0"
+google-auth = "1.37.0"
 google-services = "4.4.2"
 kotlin = "2.2.0-RC2"
 kotlinx-collections-immutable = "0.4.0"
@@ -37,14 +38,17 @@ desugar-jdk = { module = "com.android.tools:desugar_jdk_libs", version.ref = "de
 firebase-common = { module = "dev.gitlive:firebase-common", version.ref = "firebase" }
 firebase-config = { module = "dev.gitlive:firebase-config", version.ref = "firebase" }
 firebase-messaging = { module = "dev.gitlive:firebase-messaging", version.ref = "firebase" }
+google-oauth2-http = { module = "com.google.auth:google-auth-library-oauth2-http", version.ref = "google-auth" }
 kotlin-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinx-collections-immutable" }
 kotlin-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 kotlin-serialization-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlinx-serialization-protobuf" }
 ktlint-detekt-rules = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
+ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
 ktor-client-java = { module = "io.ktor:ktor-client-java", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 material3-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "material3-adaptive" }
 material3-adaptive-layout = { module = "org.jetbrains.compose.material3.adaptive:adaptive-layout", version.ref = "material3-adaptive" }
 material3-adaptive-navigation = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "material3-adaptive" }
