--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-agp = "8.12.1"
+agp = "8.12.2"
 android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "36"
 androidx-activityCompose = "1.10.1"
-androidx-lifecycle = "2.9.2"
-androidx-navigation-compose = "2.9.0-beta05"
+androidx-lifecycle = "2.9.3"
+androidx-navigation-compose = "2.9.0-rc01"
 coil = "3.3.0"
 coil-network-ktor = "3.3.0"
 compose-plugin = "1.8.2"
-compose-hot-reload-plugin = "1.0.0-beta05"
+compose-hot-reload-plugin = "1.0.0-beta06"
 compose-ui-backhandler = "1.8.2"
 desugar-jdk = "2.1.5"
 detekt = "1.23.8"
